--- a/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/estilo/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/estilo/style.css
@@ -1,1 +1,68 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+
+}
+
+html,body {
+    min-height: 100vh;
+    background-color: darkgray;
+    
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 40px;
+    
+    font-variant: small-caps;
+}
+
+header >p {
+    padding-bottom: 40px;
+}
+
+header a, footer a{ 
+    color: rgb(255, 253, 253);
+    text-decoration: none;
+    font-weight: bolder;
+}
+header a:hover, footer a:hover {
+    text-decoration: underline;
+    font-size: larger;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 1.5em;
+    padding-left: 30px;
+}
+section.normal {
+    background-color: rgba(245, 101, 173, 0.466);
+    color: aqua;
+}
+
+section.imagem{
+    background-color: black;
+    color: aliceblue;
+}
+
+section.imagem > p {
+    width: 400px;
+    background-color: rgba(255, 228, 196, 0.295);
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
