--- a/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/estilo/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/estilo/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sirin Stencil', cursive;
+}
 *{
     margin: 0px;
     padding: 0px;
@@ -9,6 +18,7 @@
 html,body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
     
 }
 
@@ -16,12 +26,14 @@ header {
     background-color: black;
     color: white;
     text-align: center;
+    
 }
 
 header > h1 {
     padding-top: 40px;
-    
+    font-family: var(--fonte2);
     font-variant: small-caps;
+    font-size: 5vw;
 }
 
 header >p {
@@ -43,6 +55,8 @@ section {
     padding-bottom: 10vh;
     line-height: 1.5em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.2vw;
 }
 section.normal {
     background-color: rgba(245, 101, 173, 0.466);
@@ -55,7 +69,8 @@ section.imagem{
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block ;
+    padding: 10px;
     background-color: rgba(255, 228, 196, 0.295);
 }
 
