--- a/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/estilo/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/estilo/style.css
@@ -16,6 +16,9 @@
 }
 
 html,body {
+    min-width: 300px;
+    max-width: 1200px;
+    margin: auto;
     min-height: 100vh;
     background-color: darkgray;
     font-family: var(--fonte1);
@@ -58,20 +61,43 @@ section {
     font-family: var(--fonte3);
     font-size: 3.2vw;
 }
+
+section > p{
+    padding-bottom: 1em;
+    text-shadow: 2px 2px 5px rgba(75, 75, 247, 0.315);
+}
 section.normal {
-    background-color: rgba(245, 101, 173, 0.466);
-    color: aqua;
+    background-color: rgb(255, 255, 255);
+    color: rgb(8, 8, 8);
 }
 
 section.imagem{
     background-color: black;
     color: aliceblue;
+    box-shadow: inset 5px 5px 13px -2px rgba(0, 0, 0, 0.384);
+}
+section#img01 {
+    background-image: url("../imagens/background001.jpg");
+    background-attachment: fixed;
+    background-position: center center;
+}
+section#img01 >p{
+    background-color: rgba(255, 255, 255, 0.507);
+}
+section#img02 {
+    background-image: url("../imagens/background002.jpg");
+    background-attachment: fixed;
+    background-position: center right;
+}
+section#img02 >p{
+    background-color: rgba(8, 8, 8, 0.288);
 }
 
 section.imagem > p {
     display: inline-block ;
     padding: 10px;
-    background-color: rgba(255, 228, 196, 0.295);
+    text-shadow: 2px 2px 5px black;
+    
 }
 
 footer {
@@ -80,4 +106,16 @@ footer {
     text-align: center;
     padding: 10px;
 }
+ /*footer a:link{
+     color: rgb(250, 250, 252);
+ }
+footer a:visited{
+    color: green;
+}
+ footer a:active{
+     color: red;
+ }
 
+ footer a:hover{
+     color: yellow;
+ }*/
