--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/estilos/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/estilos/style.css
@@ -34,3 +34,31 @@ section#telefone{
     background: url('../imagens/frame-iphone.png')no-repeat;
 
 }
+ iframe#tela{
+    position: absolute;
+    top: 80px;
+    left: 23px;
+    width: 269px;
+    height: 471px;
+ }
+
+ section#redes-sociais{
+    text-align: right;
+ }
+ section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    margin-right: 25px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 9px black;
+    box-sizing: border-box;
+    
+ }
+
+ section#redes-sociais img:hover{
+    border: 1.5px solid rgba(255, 255, 255, 0.729);
+    transform: translate(-2px,-2px);
+    transition: 0.8s;
+    box-shadow: 1px 1px 14px rgba(72, 240, 234, 0.812);
+   
+ }
