--- a/HTML-CSS/Exercicios/ex026/mq005/estilos/style.css
+++ b/HTML-CSS/Exercicios/ex026/mq005/estilos/style.css
@@ -17,15 +17,29 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+span#burger {
+    background-color: rgba(42, 42, 42, 0.415);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+span#burger:hover{
+    background-color: white;
+    color: black;
+    
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
     list-style-type: none;
 }
 
-menu ul >li > a {
+menu > ul >li > a {
     display: block;
     padding: 10px;
     text-decoration: none;
@@ -39,7 +53,7 @@ menu > ul >li >a:hover{
     background-color: lightgray;
     color: black;
 }
-main {
+main{
     width: 90vw;
     background-color: white;
     margin: auto;
@@ -48,6 +62,15 @@ main {
     border-radius: 10px;
 }
 
+h2 {
+    text-align: center;
+}
+img {
+    width: 90vw;
+    margin: auto;
+    height: 673px;
+    padding-bottom: 10px;
+}
 article > h2 {
     padding-bottom: 20px;
 }
