--- a/HTML-CSS/Exercicios/ex026/mq005/estilos/style.css
+++ b/HTML-CSS/Exercicios/ex026/mq005/estilos/style.css
@@ -81,16 +81,36 @@ img {
     margin-bottom: 10px;
    
 }
-.img-car > p {
+/*.img-car > p {
     padding: 5px;
     margin: 5px;
     background-color: rgb(148, 148, 149);
     text-indent: 10px;
     margin-bottom: 10px;
-}
+}*/
 
 article > p  {
     text-align: justify;
     margin-bottom: 20px;
     text-indent: 10px;
+}
+/*figure {
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 220px;
+    margin: auto;
+}*/
+
+
+
+figcaption {
+    
+    background-color: rgb(75, 75, 75);
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 5px;
+    margin-bottom: 5px;
+    text-align: center;
 }
