--- a/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
@@ -5,4 +5,66 @@
     verde: #49a09d
     lilas: #5f2c82
 */
+:root {
+    --color-1: #74559c;
+    --color-2: #f9f6fe;
+    --color-3: #49a09d; /*verde*/
+    --color-4: #5f2c82; /*lilas*/
+  }
 
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+
+}
+body,html {
+    background-color: var(--color-4);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: var(--color-2);
+    width: 250px;
+    height: 500px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.450);
+}
+
+section#login > div#imagem {
+    display: block;
+    background: var(--color-4) url('../imagens/building.jpg') no-repeat;
+    background-size: cover;
+    height: 320px;
+}
+
+section#login > div#form {
+    display: block;
+    padding: 10px;
+
+}
+
+section#sec { /*galo saiajim*/
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    width: 650px;
+    height: 500px;
+    transform: translate(50%, 50%);
+    
+    filter: drop-shadow(15px 10px 13px rgb(254, 241, 2));
+    
+}
