--- a/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
@@ -36,17 +36,22 @@ section#login {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 
     background-color: var(--color-2);
     width: 250px;
     height: 500px;
     border-radius: 15px;
     box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.450);
+
+    transition: width .2s, height .2s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
     background: var(--color-4) url('../imagens/building.jpg') no-repeat;
+    background-position: left bottom;
     background-size: cover;
     height: 320px;
 }
@@ -55,16 +60,4 @@ section#login > div#form {
     display: block;
     padding: 10px;
 
-}
-
-section#sec { /*galo saiajim*/
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    width: 650px;
-    height: 500px;
-    transform: translate(50%, 50%);
-    
-    filter: drop-shadow(15px 10px 13px rgb(254, 241, 2));
-    
 }
