--- a/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
@@ -39,7 +39,7 @@ section#login {
     overflow: hidden;
 
     background-color: var(--color-2);
-    width: 250px;
+    width: 300px;
     height: 500px;
     border-radius: 15px;
     box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.450);
@@ -53,11 +53,20 @@ section#login > div#imagem {
     background: var(--color-4) url('../imagens/building.jpg') no-repeat;
     background-position: left bottom;
     background-size: cover;
-    height: 320px;
+    height: 22vh;
 }
 
 section#login > div#form {
     display: block;
-    padding: 10px;
+    padding: 8px;
 
+}
+
+div#form > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#form > p {
+    font-size: 0.8em;
 }
