--- a/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/estilos/style.css
@@ -6,7 +6,7 @@
     lilas: #5f2c82
 */
 :root {
-    --color-1: #74559c;
+    --color-1: #532096;
     --color-2: #f9f6fe;
     --color-3: #49a09d; /*verde*/
     --color-4: #5f2c82; /*lilas*/
@@ -53,7 +53,7 @@ section#login > div#imagem {
     background: var(--color-4) url('../imagens/building.jpg') no-repeat;
     background-position: left bottom;
     background-size: cover;
-    height: 22vh;
+    height: 200px;
 }
 
 section#login > div#form {
@@ -68,5 +68,55 @@ div#form > h1 {
 }
 
 div#form > p {
+    font-size: 0.8em;
+}
+
+form>div.campo{
+    background-color: var(--color-1);
+    display: block;
+    height: 35px;
+    width: 100%;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+    background-color: #49a09d;
+    color: #f9f6fe;
+    border: none;
+    border-radius: 5px;
+    margin-top: 8px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #315857;
+    transition: 1s;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+    margin-top: 5px;
+    padding-top: 5px;
+    background-color: #ffffff;
+    color: #532096;
+    border: 1px solid var(--color-1);
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover{
+    background-color: #49a09d;
+    transition: 1s;
+}
+form >a.botao > i{
     font-size: 0.8em;
 }
